# bloc-summer-analytics-2025

./: .gitignore  README.md  USER_ISOLATION.md  app.py  boulder_grades_men.json  boulder_grades_women.json  boulders.json  config.py  data_processing.py  grading_system.py  main.py  pyproject.toml  recommendations.py  results.json  stats.py  style.css  test_grading_system.py  test_user_isolation.py  ui_components.py  utils.py
.streamlit/: config.toml
tabs/: __init__.py  climber_stats_tab.py  grading_tab.py  gym_stats_tab.py  path_success_tab.py
